Add header, footer and main content

--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Maciej Daukszewicz</title>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');</style>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="top_image">
-      <div class="top_image_background">
+    <header class="road">
+      <div class="author">
         <h1 class="page_title">Maciej Daukszewicz</h1>
-        <h2 class="page_subtitle">Psycholog</h2>
+        <h3 class="page_subtitle">Gabinet Terapii Uzależnień</h2>
       </div>
     </header>
+    <section class="activity">
+      <div class="container">
+        <h2 class="chapter">O mnie</h2>
+        <p>
+          Dzień dobry,<br>
+          Nazywam się Maciej Daukszewicz.<br>
+          Jestem specjalistą psychoterapii uzależnień oraz psychologiem. Swoją pomoc kieruję przede wszystkim do osób zmagających się z uzależnieniem,  syndromem współuzależnienia ,trudnościami w zakresie radzenia sobie z emocjami, lękiem. Pracuję z osobami dorosłymi, parami oraz młodzieżą. Prowadzę psychoterapię długoterminową, udzielam konsultacji psychologicznych, jak i również wsparcia w kryzysie.
+        </p>
+      </div>
+      <div class="container">
+        <h2 class="chapter">Oferta</h2>
+        <p>Oferuję psychoterapię dla osób uzależnionych od: substancji psychoaktywnych (narkotyki, alkohol, leki, papierosy, dopalacze, marihuana) oraz zmagających się z uzależnieniami behawioralnymi (hazard, seksoholizm, masturbacja, pornografia, gry komputerowe, zakupoholizm, telefon komórkowy, jedzenie itp.).<br>
+          Ponadto oferuję psychoterapię dla osób z syndromem współuzależnienia m.in w zakresie tłumienia emocji, nadmiernej kontroli, trudności w stawianiu granic, nieufności, chronicznej złości, nadmiernego lęku itp.).<br>
+          oraz do osób zmagającym się z syndromem DDA,DDN,DDD.<br>
+          Świadczę również pomoc oraz wsparcie psychologiczne w szczególności w zakresie: niskiej samooceny, nieśmiałości, problemów rodzinnych, wychowawczych, kryzysów emocjonalnych oraz kryzysów zawodowych.
+        </p>
+      </div>
+      <div class="container">
+        <h2 class="chapter">Kompetencje</h2>
+        <p>
+          Posiadam doświadczenie zawodowe w pracy z osobami uzależnionymi oraz z syndromem współuzależnienia w palcówkach stacjonarnych i ambulatoryjnych.
+          Ukończyłem 5-letnie studia magisterskie na kierunku Psychologia ze ścieżką specjalizacyjną psychologia kliniczna oraz psychologią sądowo-penitencjarną na Uniwersytecie Gdańskim w Gdańsku.
+          Ukończyłem 4-letnie specjalistyczne szkolenie PFST uzyskując tytuł Specjalisty Terapii Uzależnień nr certyfikatu SP/1160/2016.
+          Ukończyłem szkolenie Candis dla realizatorów programu terapii osób uzależnionych od marihuany.
+          W pracy z pacjentami korzystam z narzędzi terapeutycznych pochodzących z nurtów: terapii schematów, dialektyczno-behawioralnej, terapii poznawczo-behawioralnej.
+          Swoją pracę podaję regularnej superwizji.<br>
+          W swojej praktyce zawodowej kieruję się dobrem Klienta, przestrzegając kodeksu etyczno- zawodowego Psychoterapeuty Uzależnień oraz Polskiego Towarzystwa Psychologicznego.<br>
+        </p>
+      </div>
+    </section>
     <section class="info">
       <div class="container">
         <div class="row">
@@ -25,17 +56,17 @@
             <h4>Kontakt</h4>
             <p>Gdańsk Żabianka<br>ul. Pomorska 82A/91</p>
           </div>
+          <div class="box">
+            <a id="zl-url" class="zl-url" href="https://www.znanylekarz.pl/maciej-daukszewicz/psycholog-psychoterapeuta/gdansk" rel="nofollow" data-zlw-doctor="maciej-daukszewicz" data-zlw-type="big" data-zlw-opinion="true" data-zlw-hide-branding="true">
+              Maciej Daukszewicz - ZnanyLekarz.pl
+            </a>
+            <script>!function($_x,_s,id){var js,fjs=$_x.getElementsByTagName(_s)[0];if(!$_x.getElementById(id)){js = $_x.createElement(_s);js.id = id;js.src = "//platform.docplanner.com/js/widget.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","zl-widget-s");</script>
+          </div>
         </div>
-      </div>
-      <div class="link_znany_lekarz">
-        <a id="zl-url" class="zl-url" href="https://www.znanylekarz.pl/maciej-daukszewicz/psycholog-psychoterapeuta/gdansk" rel="nofollow" data-zlw-doctor="maciej-daukszewicz" data-zlw-type="big" data-zlw-opinion="true" data-zlw-hide-branding="true">
-          Maciej Daukszewicz - ZnanyLekarz.pl
-        </a>
-        <script>!function($_x,_s,id){var js,fjs=$_x.getElementsByTagName(_s)[0];if(!$_x.getElementById(id)){js = $_x.createElement(_s);js.id = id;js.src = "//platform.docplanner.com/js/widget.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","zl-widget-s");</script>
       </div>
     </section>
     <footer>
-      <p>(C) Antoni Kowalewski</p>
+      <p>&copy 2022 Antoni Kowalewski</p>
     </footer>
   </body>
 </html>
