--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       </div>
       <div class="container">
         <h2 class="chapter">Oferta</h2>
-        <p>Oferuję psychoterapię dla osób uzależnionych od: substancji psychoaktywnych (narkotyki, alkohol, leki, papierosy, dopalacze, marihuana) oraz zmagających się z uzależnieniami behawioralnymi (hazard, seksoholizm, masturbacja, pornografia, gry komputerowe, zakupoholizm, telefon komórkowy, jedzenie itp.).<br>
-          Ponadto oferuję psychoterapię dla osób z syndromem współuzależnienia m.in w zakresie tłumienia emocji, nadmiernej kontroli, trudności w stawianiu granic, nieufności, chronicznej złości, nadmiernego lęku itp.).<br>
-          oraz do osób zmagającym się z syndromem DDA,DDN,DDD.<br>
+        <p>Oferuję psychoterapię dla osób uzależnionych od: substancji psychoaktywnych (narkotyki, alkohol, leki, papierosy, dopalacze, marihuana) oraz zmagających się z uzależnieniami behawioralnymi (hazard, seksoholizm, masturbacja, pornografia, gry komputerowe, zakupoholizm, telefon komórkowy, jedzenie itp.).
+          Ponadto oferuję psychoterapię dla osób z syndromem współuzależnienia m.in w zakresie tłumienia emocji, nadmiernej kontroli, trudności w stawianiu granic, nieufności, chronicznej złości, nadmiernego lęku itp.).
+          oraz do osób zmagającym się z syndromem DDA,DDN,DDD.
           Świadczę również pomoc oraz wsparcie psychologiczne w szczególności w zakresie: niskiej samooceny, nieśmiałości, problemów rodzinnych, wychowawczych, kryzysów emocjonalnych oraz kryzysów zawodowych.
         </p>
       </div>
@@ -53,7 +53,7 @@
             <p>604 509 639</p>
           </div>
           <div class="box">
-            <h4>Kontakt</h4>
+            <h4>Gabinet</h4>
             <p>Gdańsk Żabianka<br>ul. Pomorska 82A/91</p>
           </div>
           <div class="box">
