--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </section>
     <footer>
-      <p>&copy 2022 Antoni Kowalewski</p>
+      <p>&copy; 2022 Antoni Kowalewski</p>
     </footer>
   </body>
 </html>
