Add fixed navbar, rebuild header and section

--- a/index.html
+++ b/index.html
@@ -9,51 +9,67 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <nav class="navigation">
+      <div class="container">
+        <ul>
+          <li>
+            <a href="#omnie">O mnie</a>
+          </li>
+          <li>
+            <a href="#oferta">Oferta</a>
+          </li>
+          <li>
+            <a href="#kompetencje">Kompetencje</a>
+          </li>
+          <li>
+            <a href="#kontakt">Kontakt</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <header class="road">
       <div class="author">
         <h1 class="page_title">Maciej Daukszewicz</h1>
-        <h2 class="page_subtitle">Gabinet Terapii Uzależnień</h2>
+        <div class="line"></div>
+        <h2 class="page_subtitle">Psycholog psychoterapeuta</h2>
       </div>
     </header>
     <section class="activity">
       <div class="container">
-        <h2 class="chapter">O mnie</h2>
+        <div class="medical_site">
+          <a id="zl-url" class="zl-url" href="https://www.znanylekarz.pl/maciej-daukszewicz/psycholog-psychoterapeuta/gdansk" rel="nofollow" data-zlw-doctor="maciej-daukszewicz" data-zlw-type="big" data-zlw-opinion="true" data-zlw-hide-branding="true">
+            Maciej Daukszewicz - ZnanyLekarz.pl
+          </a>
+          <script>!function($_x,_s,id){var js,fjs=$_x.getElementsByTagName(_s)[0];if(!$_x.getElementById(id)){js = $_x.createElement(_s);js.id = id;js.src = "//platform.docplanner.com/js/widget.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","zl-widget-s");</script>
+        </div>
+      </div>
+      <div class="container">
+        <h2 id="omnie" class="chapter">O mnie</h2>
         <p>
-          Dzień dobry,<br>
-          Nazywam się Maciej Daukszewicz.<br>
+          Dzień dobry, nazywam się Maciej Daukszewicz.<br><br>
           Jestem specjalistą psychoterapii uzależnień oraz psychologiem. Swoją pomoc kieruję przede wszystkim do osób zmagających się z uzależnieniem,  syndromem współuzależnienia ,trudnościami w zakresie radzenia sobie z emocjami, lękiem. Pracuję z osobami dorosłymi, parami oraz młodzieżą. Prowadzę psychoterapię długoterminową, udzielam konsultacji psychologicznych, jak i również wsparcia w kryzysie.
         </p>
       </div>
       <div class="container">
-        <h2 class="chapter">Oferta</h2>
-        <p>Oferuję psychoterapię dla osób uzależnionych od: substancji psychoaktywnych (narkotyki, alkohol, leki, papierosy, dopalacze, marihuana) oraz zmagających się z uzależnieniami behawioralnymi (hazard, seksoholizm, masturbacja, pornografia, gry komputerowe, zakupoholizm, telefon komórkowy, jedzenie itp.).
-          Ponadto oferuję psychoterapię dla osób z syndromem współuzależnienia m.in w zakresie tłumienia emocji, nadmiernej kontroli, trudności w stawianiu granic, nieufności, chronicznej złości, nadmiernego lęku itp.).
-          oraz do osób zmagającym się z syndromem DDA,DDN,DDD.
-          Świadczę również pomoc oraz wsparcie psychologiczne w szczególności w zakresie: niskiej samooceny, nieśmiałości, problemów rodzinnych, wychowawczych, kryzysów emocjonalnych oraz kryzysów zawodowych.
+        <h2 id="oferta" class="chapter">Oferta</h2>
+        <p>Oferuję psychoterapię dla osób uzależnionych od: substancji psychoaktywnych (narkotyki, alkohol, leki, papierosy, dopalacze, marihuana) oraz zmagających się z uzależnieniami behawioralnymi (hazard, seksoholizm, masturbacja, pornografia, gry komputerowe, zakupoholizm, telefon komórkowy, jedzenie itp.). Ponadto oferuję psychoterapię dla osób z syndromem współuzależnienia m.in w zakresie tłumienia emocji, nadmiernej kontroli, trudności w stawianiu granic, nieufności, chronicznej złości, nadmiernego lęku itp.). oraz do osób zmagającym się z syndromem DDA,DDN,DDD. Świadczę również pomoc oraz wsparcie psychologiczne w szczególności w zakresie: depresji, zaburzeń o podłożu psychosomatycznym, niskiej samooceny, nieśmiałości, problemów rodzinnych, wychowawczych, kryzysów emocjonalnych oraz kryzysów zawodowych.
         </p>
       </div>
       <div class="container">
-        <h2 class="chapter">Kompetencje</h2>
-        <p>
-          Posiadam doświadczenie zawodowe w pracy z osobami uzależnionymi oraz z syndromem współuzależnienia w palcówkach stacjonarnych i ambulatoryjnych.
-          Ukończyłem 5-letnie studia magisterskie na kierunku Psychologia ze ścieżką specjalizacyjną psychologia kliniczna oraz psychologią sądowo-penitencjarną na Uniwersytecie Gdańskim w Gdańsku.
-          Ukończyłem 4-letnie specjalistyczne szkolenie PFST uzyskując tytuł Specjalisty Terapii Uzależnień nr certyfikatu SP/1160/2016.
-          Ukończyłem szkolenie Candis dla realizatorów programu terapii osób uzależnionych od marihuany.
-          W pracy z pacjentami korzystam z narzędzi terapeutycznych pochodzących z nurtów: terapii schematów, dialektyczno-behawioralnej, terapii poznawczo-behawioralnej.
-          Swoją pracę podaję regularnej superwizji.<br>
-          W swojej praktyce zawodowej kieruję się dobrem Klienta, przestrzegając kodeksu etyczno- zawodowego Psychoterapeuty Uzależnień oraz Polskiego Towarzystwa Psychologicznego.<br>
+        <h2 id="kompetencje" class="chapter">Kompetencje</h2>
+        <p>Posiadam doświadczenie zawodowe w pracy z osobami uzależnionymi oraz z syndromem współuzależnienia w palcówkach stacjonarnych i ambulatoryjnych. Współpracowałem z Ośrodkiem Profilaktyki Uzależnień, Poradnią Leczenia Uzależnień w Gdyni, Młodzieżowym Ośrodkiem Terapeutycznym „Mrowisko” w Sopocie, Stowarzyszeniem Monar w Gdańsku. Ukończyłem 5-letnie studia magisterskie na kierunku Psychologia ze ścieżką specjalizacyjną psychologia kliniczna oraz psychologią sądowo-penitencjarną na Uniwersytecie Gdańskim w Gdańsku. Ukończyłem 4-letnie specjalistyczne szkolenie PFST uzyskując tytuł Specjalisty Terapii Uzależnień nr certyfikatu SP/1160/2016. Ukończyłem szkolenie Candis dla realizatorów programu terapii osób uzależnionych od marihuany. Aktualnie rozwijam umiejętności w zakresie terapii schematu, jestem w trakcie certyfikacji. W pracy z pacjentami korzystam z narzędzi terapeutycznych pochodzących z nurtów: terapii schematów, dialektyczno-behawioralnej, terapii poznawczo-behawioralnej. Swoją pracę podaję regularnej superwizji. W swojej praktyce zawodowej kieruję się dobrem Klienta, przestrzegając kodeksu etyczno- zawodowego Psychoterapeuty Uzależnień oraz Polskiego Towarzystwa Psychologicznego.
         </p>
       </div>
     </section>
     <section class="info">
       <div class="container">
+        <h2 id="kontakt" class="chapter">Kontakt</h2>
         <div class="row">
           <div class="box">
             <h4>Telefon</h4>
             <p>604 509 639</p>
           </div>
-          <div class="box">
-            <h4>Gabinet</h4>
+          <div class="box adress">
             <p>Gdańsk Żabianka<br>ul. Pomorska 82A/91</p>
           </div>
           <div class="box">
