--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </li>
         </ul>
         <div class="phone_number_nav">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
+          <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="phone_symbol"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
           <p class="phone_number">604 509 639</p>
         </div>
       </div>
@@ -41,7 +41,9 @@
     <section class="activity">
       <div class="container">
         <div class="medical_site">
-          <a id="zl-url" class="zl-url profile" href="https://www.znanylekarz.pl/maciej-daukszewicz/psycholog-psychoterapeuta/gdansk" rel="nofollow" data-zlw-doctor="maciej-daukszewicz" data-zlw-type="big" data-zlw-opinion="false" data-zlw-hide-branding="true">Maciej Daukszewicz - ZnanyLekarz.pl</a>
+          <a id="zl-url" class="zl-url" href="https://www.znanylekarz.pl/maciej-daukszewicz/psycholog-psychoterapeuta/gdansk" rel="nofollow" data-zlw-doctor="maciej-daukszewicz" data-zlw-type="big" data-zlw-opinion="true" data-zlw-hide-branding="true">
+            Maciej Daukszewicz - ZnanyLekarz.pl
+          </a>
           <script>!function($_x,_s,id){var js,fjs=$_x.getElementsByTagName(_s)[0];if(!$_x.getElementById(id)){js = $_x.createElement(_s);js.id = id;js.src = "//platform.docplanner.com/js/widget.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","zl-widget-s");</script>
         </div>
       </div>
@@ -66,19 +68,17 @@
       <div class="container">
         <h2 id="kontakt" class="chapter">Kontakt</h2>
         <div class="row">
-          <div class="box">
+          <div class="box number">
             <div class="phone_number_box">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
+              <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
               <p class="phone_number">604 509 639</p>
             </div>
           </div>
           <div class="box adress">
             <p>Gdańsk Żabianka<br>ul. Pomorska 82A/91</p>
           </div>
-          <div class="box">
-            <a id="zl-url" class="zl-url" href="https://www.znanylekarz.pl/maciej-daukszewicz/psycholog-psychoterapeuta/gdansk" rel="nofollow" data-zlw-doctor="maciej-daukszewicz" data-zlw-type="big" data-zlw-opinion="true" data-zlw-hide-branding="true">
-              Maciej Daukszewicz - ZnanyLekarz.pl
-            </a>
+          <div class="box doctor_site">
+            <a class="zl-url profile" href="https://www.znanylekarz.pl/maciej-daukszewicz/psycholog-psychoterapeuta/gdansk" rel="nofollow" data-zlw-doctor="maciej-daukszewicz" data-zlw-type="big" data-zlw-opinion="false" data-zlw-hide-branding="true">Maciej Daukszewicz - ZnanyLekarz.pl</a>
             <script>!function($_x,_s,id){var js,fjs=$_x.getElementsByTagName(_s)[0];if(!$_x.getElementById(id)){js = $_x.createElement(_s);js.id = id;js.src = "//platform.docplanner.com/js/widget.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","zl-widget-s");</script>
           </div>
         </div>
