--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <section class="activity">
       <div class="container">
-        <div class="medical_site">
+        <div class="medical_site_1">
           <a id="zl-url" class="zl-url" href="https://www.znanylekarz.pl/maciej-daukszewicz/psycholog-psychoterapeuta/gdansk" rel="nofollow" data-zlw-doctor="maciej-daukszewicz" data-zlw-type="big" data-zlw-opinion="true" data-zlw-hide-branding="true">
             Maciej Daukszewicz - ZnanyLekarz.pl
           </a>
@@ -52,6 +52,14 @@
         <p>Dzień dobry, nazywam się Maciej Daukszewicz.<br><br>
         Jestem <strong>specjalistą psychoterapii uzależnień, psychologiem, terapeutą schematów w trakcie certyfikacji</strong>. Swoją pomoc kieruję przede wszystkim do osób zmagających się z uzależnieniem, syndromem współuzależnienia, trudnościami w zakresie radzenia sobie z emocjami, lękiem. Pracuję z osobami dorosłymi, parami oraz młodzieżą. Prowadzę psychoterapię długoterminową, udzielam konsultacji psychologicznych, jak i również wsparcia w kryzysie.
         </p>
+      </div>
+      <div class="container">
+        <div class="medical_site_2">
+          <a id="zl-url" class="zl-url" href="https://www.znanylekarz.pl/maciej-daukszewicz/psycholog-psychoterapeuta/gdansk" rel="nofollow" data-zlw-doctor="maciej-daukszewicz" data-zlw-type="big" data-zlw-opinion="true" data-zlw-hide-branding="true">
+            Maciej Daukszewicz - ZnanyLekarz.pl
+          </a>
+          <script>!function($_x,_s,id){var js,fjs=$_x.getElementsByTagName(_s)[0];if(!$_x.getElementById(id)){js = $_x.createElement(_s);js.id = id;js.src = "//platform.docplanner.com/js/widget.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","zl-widget-s");</script>
+        </div>
       </div>
       <div class="container">
         <h2 id="oferta" class="chapter">Oferta</h2>
