--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <script>!function($_x,_s,id){var js,fjs=$_x.getElementsByTagName(_s)[0];if(!$_x.getElementById(id)){js = $_x.createElement(_s);js.id = id;js.src = "//platform.docplanner.com/js/widget.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","zl-widget-s");</script>
         </div>
       </div>
-      <div class="container">
+      <div class="container o_mnie">
         <h2 id="omnie" class="chapter">O mnie</h2>
         <p>Dzień dobry, nazywam się Maciej Daukszewicz.<br><br>
         Jestem <strong>specjalistą psychoterapii uzależnień, psychologiem, terapeutą schematów w trakcie certyfikacji</strong>. Swoją pomoc kieruję przede wszystkim do osób zmagających się z uzależnieniem, syndromem współuzależnienia, trudnościami w zakresie radzenia sobie z emocjami, lękiem. Pracuję z osobami dorosłymi, parami oraz młodzieżą. Prowadzę psychoterapię długoterminową, udzielam konsultacji psychologicznych, jak i również wsparcia w kryzysie.
