--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Psychoterapeuta Daukszewicz</title>
+    <meta name="description" content="Specjalista psychoterapii uzależnień, psycholog. Pomagam osobom zmagającym się z uzależnieniem oraz trudnościami w zakresie radzenia sobie z emocjami.">
+    <title>Psychoterapeuta Maciej Daukszewicz</title>
     <style>@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');</style>
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/favicon-192x192.png" sizes="192x192">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -50,7 +56,7 @@
       <div class="container o_mnie">
         <h2 id="omnie" class="chapter">O mnie</h2>
         <p>Dzień dobry, nazywam się Maciej Daukszewicz.<br><br>
-        Jestem <strong>specjalistą psychoterapii uzależnień, psychologiem, terapeutą schematów w trakcie certyfikacji</strong>. Swoją pomoc kieruję przede wszystkim do osób zmagających się z uzależnieniem, syndromem współuzależnienia, trudnościami w zakresie radzenia sobie z emocjami, lękiem. Pracuję z osobami dorosłymi, parami oraz młodzieżą. Prowadzę psychoterapię długoterminową, udzielam konsultacji psychologicznych, jak i również wsparcia w kryzysie.
+        Jestem <strong>specjalistą psychoterapii uzależnień, psychologiem, terapeutą schematów</strong> w trakcie certyfikacji. Swoją pomoc kieruję przede wszystkim do osób zmagających się z uzależnieniem, syndromem współuzależnienia, trudnościami w zakresie radzenia sobie z emocjami, lękiem. Pracuję z osobami dorosłymi, parami oraz młodzieżą. Prowadzę psychoterapię długoterminową, udzielam konsultacji psychologicznych, jak i również wsparcia w kryzysie.
         </p>
       </div>
       <div class="container">
